--- a/res/xml/monet_engine_settings.xml
+++ b/res/xml/monet_engine_settings.xml
@@ -43,8 +43,8 @@
         android:title="@string/linear_lightness_title" />
 
     <!-- Brightness -->
-    <com.krypton.settings.preference.CustomSeekBarPreference
-        android:key="white_luminance"
+    <com.krypton.settings.preference.SecureSettingSeekBarPreference
+        android:key="monet_engine_white_luminance"
         android:title="@string/white_luminance_title"
         android:defaultValue="425"
         android:max="1000"
