KryptonSettings: res: make chroma factor slider non persistent
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/monet_engine_settings.xml
+++ b/res/xml/monet_engine_settings.xml
@@ -34,6 +34,7 @@
         android:title="@string/chroma_factor_title"
         android:defaultValue="100"
         android:max="100"
+        android:persistent="false"
         settings:min="0"
         settings:interval="10" />
 
