--- a/res/xml/krypton_settings.xml
+++ b/res/xml/krypton_settings.xml
@@ -24,6 +24,14 @@
         android:summary="@string/theme_settings_summary"
         android:icon="@drawable/ic_palette"
         android:fragment="com.krypton.settings.fragment.theme.ThemeSettingsFragment" />
+    
+    <!-- Statusbar settings -->
+    <Preference
+        android:key="statusbar_settings"
+        android:title="@string/statusbar_settings_title"
+        android:summary="@string/statusbar_settings_summary"
+        android:icon="@drawable/ic_statusbar"
+        android:fragment="com.krypton.settings.fragment.statusbar.StatusbarSettingsFragment" />
 
     <!-- Device Settings -->
     <Preference
