KryptonSettings: add a toggle to use wallpaper / custom color for monet
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/monet_engine_settings.xml
+++ b/res/xml/monet_engine_settings.xml
@@ -23,6 +23,12 @@
         android:title="@string/accurate_shades_title"
         android:defaultValue="1" />
 
+    <!-- Use wallpaper colors -->
+    <SwitchPreference
+        android:key="monet_engine_use_wallpaper_color"
+        android:title="@string/use_wallpaper_color_title"
+        android:defaultValue="1" />
+
     <!-- Color override -->
     <com.krypton.settings.preference.SecureSettingColorPickerPreference
         android:key="monet_engine_color_override"
