--- a/res/layout/preference_custom_seekbar.xml
+++ b/res/layout/preference_custom_seekbar.xml
@@ -1,145 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014-2016 The Android Open Source Project
-
+<!-- Copyright (C) 2018 The Android Open Source Project
+                   2021 AOSP-Krypton Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
-          http://www.apache.org/licenses/LICENSE-2.0
-
+         http://www.apache.org/licenses/LICENSE-2.0
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:background="?android:attr/activatedBackgroundIndicator"
+    android:background="?android:attr/selectableItemBackground"
+    android:clipChildren="false"
     android:clipToPadding="false">
 
-    <LinearLayout
-        android:id="@android:id/icon_frame"
+    <androidx.preference.internal.PreferenceImageView
+        android:id="@android:id/icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:scaleType="centerInside"
+        settings:layout_constraintStart_toStartOf="parent"
+        settings:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@android:id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="start"
+        android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceListItem"
+        android:textColor="?android:attr/textColorPrimary"
+        android:ellipsize="marquee"
+        android:fadingEdge="horizontal"
+        settings:layout_constraintEnd_toEndOf="parent"
+        settings:layout_constraintStart_toEndOf="@android:id/icon"
+        settings:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@android:id/summary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="?android:attr/textColorSecondary"
+        android:textAlignment="viewStart"
+        android:maxLines="4"
+        settings:layout_constraintEnd_toEndOf="@android:id/title"
+        settings:layout_constraintStart_toStartOf="@android:id/title"
+        settings:layout_constraintTop_toBottomOf="@android:id/title" />
+
+    <TextView
+        android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-4dp"
-        android:minWidth="60dp"
-        android:gravity="start|center_vertical"
-        android:orientation="horizontal"
-        android:paddingEnd="12dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp">
-        <com.android.internal.widget.PreferenceImageView
-            android:id="@android:id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="48dp"
-            android:maxHeight="48dp" />
-    </LinearLayout>
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceListItemSecondary"
+        android:textColor="?android:attr/textColorSecondary"
+        android:maxLines="1"
+        android:ellipsize="end"
+        settings:layout_constraintStart_toStartOf="@android:id/title"
+        settings:layout_constraintTop_toBottomOf="@android:id/summary" />
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/reset"
+        android:src="@drawable/ic_custom_seekbar_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/value"
+        android:layout_centerVertical="true"
+        settings:layout_constraintStart_toEndOf="@id/value"
+        settings:layout_constraintTop_toTopOf="@id/value"
+        settings:layout_constraintBottom_toBottomOf="@id/value" />
 
-        <TextView
-            android:id="@android:id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:textAppearance="?android:attr/textAppearanceListItem"
-            android:ellipsize="marquee" />
-
-        <TextView
-            android:id="@android:id/summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@android:id/title"
-            android:layout_alignStart="@android:id/title"
-            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
-            android:textColor="?android:attr/textColorSecondary"
-            android:maxLines="10"
-            android:ellipsize="end" />
-
-        <RelativeLayout
-            android:id="@+id/value_frame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_below="@android:id/summary"
-            android:layout_alignStart="@android:id/title" >
-
-            <TextView
-                android:id="@+id/value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:textAppearance="?android:attr/textAppearanceListItemSecondary"
-                android:textColor="?android:attr/textColorSecondary"
-                android:maxLines="1"
-                android:ellipsize="end" />
-
-            <ImageView
-                android:id="@+id/reset"
-                android:src="@drawable/ic_custom_seekbar_reset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_toEndOf="@id/value"
-                android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/seekbar_frame"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/value_frame"
-            android:layout_alignStart="@android:id/title" >
-
-            <ImageView
-                android:id="@+id/minus"
-                android:src="@drawable/ic_custom_seekbar_minus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true" />
-
-            <ImageView
-                android:id="@+id/plus"
-                android:src="@drawable/ic_custom_seekbar_plus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true" />
-
-            <LinearLayout
-                android:id="@+id/seekbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:layout_marginEnd="3dp"
-                android:layout_toEndOf="@id/minus"
-                android:layout_toStartOf="@id/plus"
-                android:layout_centerVertical="true" />
-        </RelativeLayout>
-    </RelativeLayout>
-
-    <!-- Preference should place its actual preference widget here. -->
-    <LinearLayout android:id="@android:id/widget_frame"
+    <ImageView
+        android:id="@+id/minus"
+        android:src="@drawable/ic_custom_seekbar_minus"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:gravity="end|center_vertical"
-        android:paddingStart="16dp"
-        android:orientation="vertical" />
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:paddingEnd="8dp"
+        settings:layout_constraintBottom_toBottomOf="@id/seekbar"
+        settings:layout_constraintEnd_toStartOf="@id/seekbar"
+        settings:layout_constraintStart_toStartOf="@android:id/title"
+        settings:layout_constraintTop_toTopOf="@id/seekbar" />
+
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:paddingStart="@dimen/preference_seekbar_padding_horizontal"
+        android:paddingEnd="@dimen/preference_seekbar_padding_horizontal"
+        android:paddingTop="@dimen/preference_seekbar_padding_vertical"
+        android:paddingBottom="@dimen/preference_seekbar_padding_vertical"
+        android:background="@null"
+        android:focusable="false"
+        android:clickable="false"
+        settings:layout_constraintBottom_toBottomOf="parent"
+        settings:layout_constraintEnd_toStartOf="@id/plus"
+        settings:layout_constraintStart_toEndOf="@id/minus"
+        settings:layout_constraintTop_toBottomOf="@id/value" />
+
+    <ImageView
+        android:id="@+id/plus"
+        android:src="@drawable/ic_custom_seekbar_plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        settings:layout_constraintEnd_toEndOf="parent"
+        settings:layout_constraintStart_toEndOf="@id/seekbar"
+        settings:layout_constraintTop_toTopOf="@id/seekbar"
+        settings:layout_constraintBottom_toBottomOf="@id/seekbar" />
+</androidx.constraintlayout.widget.ConstraintLayout>
