--- a/res/xml/krypton_settings.xml
+++ b/res/xml/krypton_settings.xml
@@ -33,6 +33,14 @@
         android:icon="@drawable/ic_statusbar"
         android:fragment="com.krypton.settings.fragment.statusbar.StatusbarSettingsFragment" />
 
+    <!-- Lockscreen settings -->
+    <Preference
+        android:key="lockscreen_settings"
+        android:title="@string/lockscreen_settings_title"
+        android:summary="@string/lockscreen_settings_summary"
+        android:icon="@drawable/ic_lockscreen"
+        android:fragment="com.krypton.settings.fragment.lockscreen.LockscreenSettingsFragment" />
+
     <!-- Device Settings -->
     <Preference
         android:key="device_settings"
