--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -22,4 +22,11 @@
         android:title="@string/lockscreen_charging_info_title"
         android:summary="@string/lockscreen_charging_info_summary"
         android:defaultValue="1" />
+
+     <com.krypton.settings.preference.SystemSettingSwitchPreference
+          android:key="double_tap_sleep_lockscreen"
+          android:title="@string/double_tap_sleep_lockscreen_title"
+          android:summary="@string/double_tap_sleep_lockscreen_summary"
+          android:defaultValue="false" />
+
 </PreferenceScreen>
