krypton: Double tap to sleep on statusbar [2/2]
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -60,4 +60,15 @@
             android:max="20"
             settings:min="10" />
     </PreferenceCategory>
+
+     <PreferenceCategory
+        android:title="@string/statusbar_gesture_title">
+
+        <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_sleep_gesture_title"
+            android:summary="@string/double_tap_sleep_gesture_summary"
+            android:defaultValue="false" />
+            
+    </PreferenceCategory>
 </PreferenceScreen>
