flamingo: Double tap to sleep on statusbar [2/2]
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -51,6 +51,18 @@
             android:defaultValue="false" />
     </PreferenceCategory>
 
+     <!-- Gestures -->	
+     <PreferenceCategory
+        android:title="@string/statusbar_gesture_title">
+
+        <com.flamingo.support.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_gesture"
+            android:title="@string/double_tap_sleep_gesture_title"
+            android:summary="@string/double_tap_sleep_gesture_summary"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
+
     <!-- Miscellaneous -->
     <PreferenceCategory
         android:title="@string/miscellaneous_settings_title">
