KryptonSettings: allow toggling location privacy indicator[2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -71,4 +71,16 @@
             android:defaultValue="false" />
             
     </PreferenceCategory>
+
+    <!-- Miscellaneous -->
+    <PreferenceCategory
+        android:title="@string/miscellaneous_category_title">
+
+        <!-- Location privacy indicator -->
+        <com.krypton.settings.preference.SecureSettingSwitchPreference
+            android:key="enable_location_privacy_indicator"
+            android:title="@string/location_privacy_indicator_title"
+            android:summary="@string/location_privacy_indicator_summary" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
