KryptonSettings: allow disable of screenshot shutter sound[2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -27,4 +27,10 @@
         android:entryValues="@array/torch_power_button_gesture_values"
         android:defaultValue="0" />
 
+    <!-- Screenshot sound -->
+    <com.krypton.settings.preference.SystemSettingSwitchPreference
+        android:key="screenshot_shutter_sound"
+        android:title="@string/screenshot_shutter_sound_title"
+        android:defaultValue="1" />
+
 </PreferenceScreen>
