--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -82,5 +82,11 @@
             android:title="@string/location_privacy_indicator_title"
             android:summary="@string/location_privacy_indicator_summary" />
 
+        <!-- Combined signal icons -->
+        <com.krypton.settings.preference.SecureSettingSwitchPreference
+            android:key="show_combined_status_bar_signal_icons"
+            android:title="@string/combined_status_bar_signal_icons"
+            android:summary="@string/combined_status_bar_signal_icons_summary" />
+
     </PreferenceCategory>
 </PreferenceScreen>
