--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -31,6 +31,7 @@
     <com.krypton.settings.preference.SystemSettingSwitchPreference
         android:key="screenshot_shutter_sound"
         android:title="@string/screenshot_shutter_sound_title"
+        android:summary="@string/screenshot_shutter_sound_summary"
         android:defaultValue="1" />
 
 </PreferenceScreen>
