KryptonSettings: lockscreen_settings: use the correct setting key for lockscreen battery info
* Yep I should die.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -18,7 +18,7 @@
     android:title="@string/lockscreen_settings_title">
 
     <com.krypton.settings.preference.SystemSettingSwitchPreference
-        android:key="lockscreen_charging_info"
+        android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_charging_info_title"
         android:summary="@string/lockscreen_charging_info_summary"
         android:defaultValue="1" />
