--- a/res/layout/preference_two_target.xml
+++ b/res/layout/preference_two_target.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright (C) 2017 The Android Open Source Project
+                2021 AOSP-Krypton Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -16,70 +17,65 @@
   -->
 
 <!-- Based off preference_material_settings.xml except that ripple on only on the left side. -->
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:background="@android:color/transparent"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:clipToPadding="false">
 
-    <LinearLayout
+    <androidx.preference.internal.PreferenceImageView
+        android:id="@android:id/icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:scaleType="centerInside"
+        settings:layout_constraintStart_toStartOf="parent"
+        settings:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@android:id/title"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="?android:attr/selectableItemBackground"
-        android:gravity="start|center_vertical"
-        android:paddingStart="?android:attr/listPreferredItemPaddingStart">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="start"
+        android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceListItem"
+        android:textColor="?android:attr/textColorPrimary"
+        android:ellipsize="marquee"
+        android:fadingEdge="horizontal"
+        settings:layout_constraintEnd_toStartOf="@id/vertical_divider"
+        settings:layout_constraintStart_toEndOf="@android:id/icon"
+        settings:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/icon_frame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="56dp"
-            android:orientation="horizontal"
-            android:paddingEnd="12dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp">
-            <com.android.internal.widget.PreferenceImageView
-                android:id="@android:id/icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxWidth="48dp"
-                android:maxHeight="48dp" />
-        </LinearLayout>
+    <TextView
+        android:id="@android:id/summary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="?android:attr/textColorSecondary"
+        android:textAlignment="viewStart"
+        android:maxLines="4"
+        settings:layout_constraintEnd_toEndOf="@android:id/title"
+        settings:layout_constraintStart_toStartOf="@android:id/title"
+        settings:layout_constraintTop_toBottomOf="@android:id/title" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp">
-
-            <TextView
-                android:id="@android:id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:textAppearance="?android:attr/textAppearanceListItem"
-                android:ellipsize="marquee" />
-
-            <TextView
-                android:id="@android:id/summary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@android:id/title"
-                android:layout_alignStart="@android:id/title"
-                android:textAppearance="?android:attr/textAppearanceListItemSecondary"
-                android:textColor="?android:attr/textColorSecondary"
-                android:maxLines="10" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <include layout="@layout/preference_two_target_divider" />
+    <View
+        android:id="@+id/vertical_divider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="?android:attr/dividerVertical"
+        settings:layout_constraintEnd_toStartOf="@android:id/widget_frame"
+        settings:layout_constraintStart_toEndOf="@android:id/title"
+        settings:layout_constraintTop_toTopOf="parent"
+        settings:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- Preference should place its actual preference widget here. -->
     <LinearLayout
@@ -87,7 +83,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:minWidth="64dp"
-        android:gravity="center"
-        android:orientation="vertical" />
+        android:gravity="end"
+        android:orientation="vertical"
+        settings:layout_constraintStart_toEndOf="@android:id/title"
+        settings:layout_constraintEnd_toEndOf="parent"
+        settings:layout_constraintTop_toTopOf="parent"
+        settings:layout_constraintBottom_toBottomOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
