--- a/res/layout/preference_two_target.xml
+++ b/res/layout/preference_two_target.xml
@@ -71,7 +71,7 @@
         android:layout_height="0dp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
-        android:background="?android:attr/dividerVertical"
+        android:background="?android:attr/textColorSecondary"
         settings:layout_constraintEnd_toStartOf="@android:id/widget_frame"
         settings:layout_constraintStart_toEndOf="@android:id/title"
         settings:layout_constraintTop_toTopOf="parent"
