KryptonSettings: added preference controller for theme overlays
* partially based on OverlayCategoryPreferenceController from settings, but we use settings to persist overlay info

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -25,7 +25,7 @@
           android:fragment="com.krypton.settings.fragment.theme.MonetEngineSettingsFragment" />
 
      <ListPreference
-          android:key="android.theme.customization.font"
+          android:key="font_list_preference"
           android:title="@string/theme_customization_font_title"/>
 
 </PreferenceScreen>
