--- a/res/xml/theme_settings.xml
+++ b/res/xml/theme_settings.xml
@@ -28,4 +28,8 @@
           android:key="font_list_preference"
           android:title="@string/theme_customization_font_title"/>
 
+     <ListPreference
+          android:key="icon_pack_list_preference"
+          android:title="@string/theme_customization_icon_pack_title"/>
+
 </PreferenceScreen>
