KryptonSettings: added volume key music control toggle
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/miscellaneous_settings.xml
+++ b/res/xml/miscellaneous_settings.xml
@@ -33,5 +33,12 @@
         android:title="@string/screenshot_shutter_sound_title"
         android:summary="@string/screenshot_shutter_sound_summary"
         android:defaultValue="1" />
+    
+    <!-- Volume key music control -->
+    <com.krypton.settings.preference.SystemSettingSwitchPreference
+        android:key="volume_button_music_control"
+        android:title="@string/volume_button_music_control_title"
+        android:summary="@string/volume_button_music_control_summary"
+        android:defaultValue="0" />
 
 </PreferenceScreen>
