--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -27,4 +27,18 @@
         <item>2</item>
     </string-array>
 
+    <!-- Edge light color modes -->
+    <string-array name="ambient_pulse_color_modes">
+        <item>@string/accent</item>
+        <item>@string/wallpaper</item>
+        <item>@string/notification</item>
+        <item>@string/custom</item>
+    </string-array>
+    <string-array name="ambient_pulse_color_mode_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
