--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -78,13 +78,15 @@
         <!-- Show battery percent -->
         <com.krypton.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_show_battery_percent"
-            android:title="@string/battery_percentage_description" />
+            android:title="@string/battery_percentage_description"
+            android:defaultValue="0" />
 
         <!-- Show battery percent inside -->
         <com.krypton.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_show_battery_percent_inside"
             android:title="@string/statusbar_battery_show_percent_inside_title"
-            android:dependency="status_bar_show_battery_percent" />
+            android:dependency="status_bar_show_battery_percent"
+            android:defaultValue="0" />
     </PreferenceCategory>
 
     <!-- Miscellaneous -->
