KryptonSettings: separate out statusbar and qs customisations
* icons from https://github.com/yaap/packages_apps_YASP/blob/twelve/res/drawable

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/krypton_settings.xml
+++ b/res/xml/krypton_settings.xml
@@ -33,6 +33,14 @@
         android:icon="@drawable/ic_statusbar"
         android:fragment="com.krypton.settings.fragment.statusbar.StatusbarSettingsFragment" />
 
+    <!-- QS settings -->
+    <Preference
+        android:key="qs_settings"
+        android:title="@string/qs_settings_title"
+        android:summary="@string/qs_settings_summary"
+        android:icon="@drawable/ic_qs"
+        android:fragment="com.krypton.settings.fragment.qs.QSSettingsFragment" />
+
     <!-- Lockscreen settings -->
     <Preference
         android:key="lockscreen_settings"
