krypton: Forward-port notification counters[2/2]

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -76,6 +76,13 @@
             android:key="show_combined_status_bar_signal_icons"
             android:title="@string/combined_status_bar_signal_icons"
             android:summary="@string/combined_status_bar_signal_icons_summary" />
+       
+       <!-- Notification Counter -->
+       <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="status_bar_notif_count"
+            android:title="@string/status_bar_notif_count_title"
+            android:summary="@string/status_bar_notif_count_summary"
+            android:defaultValue="false" />
 
     </PreferenceCategory>
 </PreferenceScreen>
