--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -81,8 +81,7 @@
        <com.krypton.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_notif_count"
             android:title="@string/status_bar_notif_count_title"
-            android:summary="@string/status_bar_notif_count_summary"
-            android:defaultValue="false" />
+            android:summary="@string/status_bar_notif_count_summary" />
 
     </PreferenceCategory>
 </PreferenceScreen>
