KryptonSettings: added edge light customizations[2/2]
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -35,4 +35,10 @@
           android:summary="@string/screen_off_fod_summary"
           android:defaultValue="false" />
 
+     <Preference
+          android:key="edge_light_preference"
+          android:title="@string/edge_light_title"
+          android:persistent="false"
+          android:fragment="com.krypton.settings.fragment.lockscreen.EdgeLightSettingsFragment" />
+
 </PreferenceScreen>
