--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -18,10 +18,10 @@
     android:title="@string/statusbar_settings_title">
 
     <!-- Network traffic -->
-    <com.krypton.settings.preference.SystemSettingMasterSwitchPreference
-        android:key="network_traffic_enabled"
+    <Preference
+        android:key="network_traffic_preference"
         android:title="@string/network_traffic_category_title"
-        android:defaultValue="0"
+        android:persistent="false"
         android:fragment="com.krypton.settings.fragment.statusbar.NetworkTrafficMonitorSettingsFragment" />
 
     <PreferenceCategory
