--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -35,6 +35,12 @@
           android:summary="@string/screen_off_fod_summary"
           android:defaultValue="false" />
 
+     <com.krypton.settings.preference.SecureSettingSwitchPreference
+          android:key="secure_lockscreen_qs_disabled"
+          android:title="@string/disable_qs_title"
+          android:summary="@string/disable_qs_summary"
+          android:defaultValue="false" />
+
      <Preference
           android:key="edge_light_preference"
           android:title="@string/edge_light_title"
