--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -76,4 +76,16 @@
             android:max="255"
             settings:min="0" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/miscellaneous_category_title" >
+
+        <!-- QS Battery estimates -->
+        <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="qs_show_battery_estimate"
+            android:title="@string/qs_show_battery_estimate_title"
+            android:summaryOn="@string/qs_show_battery_estimate_summary_on"
+            android:summaryOff="@string/qs_show_battery_estimate_summary_off"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
