KryptonSettings: do not use device config flag as default value for location indicator
* also removed summary since systemui restart is not required anymore

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -70,7 +70,7 @@
         <com.krypton.settings.preference.SecureSettingSwitchPreference
             android:key="enable_location_privacy_indicator"
             android:title="@string/location_privacy_indicator_title"
-            android:summary="@string/location_privacy_indicator_summary" />
+            android:defaultValue="false" />
 
         <!-- Combined signal icons -->
         <com.krypton.settings.preference.SecureSettingSwitchPreference
