--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -35,6 +35,11 @@
           android:summary="@string/screen_off_fod_summary"
           android:defaultValue="false" />
 
+     <com.krypton.settings.preference.SystemSettingSwitchPreference
+          android:key="enable_udfps_start_haptic_feedback"
+          android:title="@string/udfps_haptic_feedback_title"
+          android:defaultValue="true" />
+
      <com.krypton.settings.preference.SecureSettingSwitchPreference
           android:key="secure_lockscreen_qs_disabled"
           android:title="@string/disable_qs_title"
