KryptonSettings: QuickSettings -> QS Panel and update summary of rest of the main page preferences
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/krypton_settings.xml
+++ b/res/xml/krypton_settings.xml
@@ -39,7 +39,7 @@
         android:title="@string/qs_settings_title"
         android:summary="@string/qs_settings_summary"
         android:icon="@drawable/ic_qs"
-        android:fragment="com.krypton.settings.fragment.qs.QSSettingsFragment" />
+        android:fragment="com.krypton.settings.fragment.qs.QSPanelSettingsFragment" />
 
     <!-- Lockscreen settings -->
     <Preference
