--- a/res/xml/qs_settings.xml
+++ b/res/xml/qs_settings.xml
@@ -101,5 +101,12 @@
             android:summary="@string/qs_footer_text_string_summary"
             android:dependency="qs_footer_text_show"
             android:defaultValue="KOSP" />
-    </PreferenceCategory>
+	
+        <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="use_tiles_on_secure_keyguard"
+            android:title="@string/use_tiles_on_secure_keyguard_title"
+            android:summary="@string/use_tiles_on_secure_keyguard_summary"
+            android:defaultValue="true" />     
+
+     </PreferenceCategory>
 </PreferenceScreen>
