--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2021 AOSP-Krypton Project
+<!-- Copyright (C) 2021-2022 AOSP-Krypton Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -76,13 +76,15 @@
         <com.krypton.settings.preference.SecureSettingSwitchPreference
             android:key="show_combined_status_bar_signal_icons"
             android:title="@string/combined_status_bar_signal_icons"
-            android:summary="@string/combined_status_bar_signal_icons_summary" />
+            android:summary="@string/combined_status_bar_signal_icons_summary"
+            settings:controller="com.krypton.settings.fragment.statusbar.CombinedSignalIconPreferenceController" />
        
        <!-- Notification Counter -->
        <com.krypton.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_notif_count"
             android:title="@string/status_bar_notif_count_title"
-            android:summary="@string/status_bar_notif_count_summary" />
+            android:summary="@string/status_bar_notif_count_summary"
+            settings:controller="com.krypton.settings.fragment.statusbar.NotificationCountPreferenceController" />
 
     </PreferenceCategory>
 </PreferenceScreen>
