--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -33,12 +33,14 @@
           android:key="screen_off_fod"
           android:title="@string/screen_off_fod_title"
           android:summary="@string/screen_off_fod_summary"
-          android:defaultValue="false" />
+          android:defaultValue="false"
+          settings:controller="com.krypton.settings.fragment.lockscreen.ScreenOffUdfpsPreferenceController" />
 
      <com.krypton.settings.preference.SystemSettingSwitchPreference
           android:key="enable_udfps_start_haptic_feedback"
           android:title="@string/udfps_haptic_feedback_title"
-          android:defaultValue="true" />
+          android:defaultValue="true"
+          settings:controller="com.krypton.settings.fragment.lockscreen.UdfpsHapticFeedbackPreferenceController" />
 
      <com.krypton.settings.preference.SecureSettingSwitchPreference
           android:key="secure_lockscreen_qs_disabled"
